--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,4 @@
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="file:./db.sqlite"
+DATABASE_URL='mysql://1dlfoy8f2lx62hb5mq9p:pscale_pw_cBm67U1w42EE2aGFmtwnEKbo7dnsfceas4Za4cRboQW@aws.connect.psdb.cloud/chirpdb?sslaccept=strict'
